@@ -59,8 +59,6 @@ import java.util.function.Supplier;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static java.util.Collections.emptySet;
-
 public class TopologyMetadata {
     private Logger log;
 
@@ -138,6 +136,10 @@ public class TopologyMetadata {
     
     public ProcessingMode processingMode() {
         return processingMode;
+    }
+
+    public boolean streamsProtocolEnabled() {
+        return StreamsConfigUtils.streamsProtocolEnabled(config);
     }
 
     public long topologyVersion() {
@@ -394,7 +396,7 @@ public class TopologyMetadata {
     }
 
     public Set<String> namedTopologiesView() {
-        return hasNamedTopologies() ? Collections.unmodifiableSet(builders.keySet()) : emptySet();
+        return hasNamedTopologies() ? Collections.unmodifiableSet(builders.keySet()) : Set.of();
     }
 
     /**
