@@ -54,7 +54,6 @@ import org.slf4j.LoggerFactory;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -71,7 +70,7 @@ import static org.apache.kafka.streams.state.internals.RocksDBStore.DB_FILE_DIR;
  * timestamps:
  * <ul>
  *     <li>a {@code validFrom} timestamp. This timestamp is explicitly associated with the record
- *     as part of the {@link VersionedKeyValueStore#put(Object, Object, long)}} call to the store;
+ *     as part of the {@link VersionedKeyValueStore#put(Object, Object, long)} call to the store;
  *     i.e., this is the record's timestamp.</li>
  *     <li>a {@code validTo} timestamp. This is the timestamp of the next record (or deletion)
  *     associated with the same key, and is implicitly associated with the record. This timestamp
@@ -132,7 +131,7 @@ public class RocksDBVersionedStore implements VersionedKeyValueStore<Bytes, byte
 
         synchronized (position) {
             if (timestamp < observedStreamTime - gracePeriod) {
-                expiredRecordSensor.record(1.0d, internalProcessorContext.currentSystemTimeMs());
+                expiredRecordSensor.record();
                 LOG.warn("Skipping record for expired put.");
                 StoreQueryUtils.updatePosition(position, internalProcessorContext);
                 return PUT_RETURN_CODE_NOT_PUT;
@@ -160,7 +159,7 @@ public class RocksDBVersionedStore implements VersionedKeyValueStore<Bytes, byte
 
         synchronized (position) {
             if (timestamp < observedStreamTime - gracePeriod) {
-                expiredRecordSensor.record(1.0d, internalProcessorContext.currentSystemTimeMs());
+                expiredRecordSensor.record();
                 LOG.warn("Skipping record for expired delete.");
                 return null;
             }
@@ -296,7 +295,7 @@ public class RocksDBVersionedStore implements VersionedKeyValueStore<Bytes, byte
             // history retention exceeded. we still check the latest value store in case the
             // latest record version satisfies the timestamp bound, in which case it should
             // still be returned (i.e., the latest record version per key never expires).
-            return new LogicalSegmentIterator(Collections.singletonList(latestView).listIterator(), key, fromTimestamp, toTimestamp, order);
+            return new LogicalSegmentIterator(List.of(latestView).listIterator(), key, fromTimestamp, toTimestamp, order);
         } else {
             final List<LogicalKeyValueSegment> segments = new ArrayList<>();
             // add segment stores
